--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>Google Ads Test Task</title>
       <script async
-
               data-admob-interstitial-slot="ca-app-pub-23211928466/ingame_interstitial_test"
               data-admob-rewarded-slot="ca-app-pub-23211928466/ingame_rewarded_test"
               src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-23211928466"
