--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>Google Ads Test Task</title>
-
-    <!-- Google Ads -->
-    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
-    <!-- Google Ads End -->
+    <script src="https://telegram.org/js/telegram-web-app.js" async></script>
 </head>
 <body>
 
 <div id="app"></div>
+
 
 <script type="module" src="/src/main.ts"></script>
 
